# ChangeLog for dev-libs/libxml2
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxml2/ChangeLog,v 1.404 2013/12/30 05:31:08 tetromino Exp $

*libxml2-2.9.1-r2 (30 Dec 2013)

  30 Dec 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  +libxml2-2.9.1-r2.ebuild, +files/libxml2-2.9.1-icu-pkgconfig.patch:
  Add multilib support (bug #480404, thanks to David Heidelberger (okias) and
  Alexis Ballier).

  19 Oct 2013; Pacho Ramos <pacho@gentoo.org>
  -files/libxml2-2.7.8-disable_static_modules.patch,
  -files/libxml2-2.8.0-icu-linking.patch,
  -files/libxml2-2.8.0-xmlParseAttValueComplex-underflow.patch,
  -files/libxml2-2.9.0-disable_static_modules.patch,
  -files/libxml2-2.9.0-excessive-entity-expansion.patch,
  -files/libxml2-2.9.0-large-file-parse.patch,
  -files/libxml2-2.9.0-nsclean.patch, -files/libxml2-2.9.0-rand_seed.patch,
  -files/libxml2-2.9.0-streaming-validation.patch,
  -files/libxml2-2.9.0-thread-portability.patch, -libxml2-2.8.0-r3.ebuild,
  -libxml2-2.9.0-r2.ebuild, -libxml2-2.9.1.ebuild:
  Drop old

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> libxml2-2.9.0-r2.ebuild,
  libxml2-2.9.1-r1.ebuild, libxml2-2.9.1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  06 Aug 2013; Agostino Sarubbo <ago@gentoo.org> libxml2-2.9.1-r1.ebuild:
  Stable for s390, wrt bug #476438

  21 Jul 2013; Agostino Sarubbo <ago@gentoo.org> libxml2-2.9.1-r1.ebuild:
  Stable for sparc, wrt bug #476438

  21 Jul 2013; Agostino Sarubbo <ago@gentoo.org> libxml2-2.9.1-r1.ebuild:
  Stable for sh, wrt bug #476438

  21 Jul 2013; Agostino Sarubbo <ago@gentoo.org> libxml2-2.9.1-r1.ebuild:
  Stable for ia64, wrt bug #476438

  14 Jul 2013; Agostino Sarubbo <ago@gentoo.org> libxml2-2.9.1-r1.ebuild:
  Stable for arm, wrt bug #476438

  14 Jul 2013; Agostino Sarubbo <ago@gentoo.org> libxml2-2.9.1-r1.ebuild:
  Stable for alpha, wrt bug #476438
