@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxml2/libxml2-2.9.1-r2.ebuild,v 1.1 2013/12/30 05:31:08 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxml2/libxml2-2.9.1-r2.ebuild,v 1.2 2014/01/03 20:48:10 tetromino Exp $
 
 EAPI="5"
 PYTHON_COMPAT=( python{2_6,2_7,3_2,3_3} )
@@ -107,6 +107,8 @@ multilib_src_configure() {
 	# switch (enabling the libxml2 debug module). See bug #100898.
 
 	# --with-mem-debug causes unusual segmentation faults (bug #105120).
+
+	local myconf
 
 	if multilib_is_native_abi; then
 		myconf="$(use_with python)
